@@ -4,6 +4,7 @@
 
 * Added the "cons3rt run" CLI command, and added options for snapshotting all hosts in a run, or restoring
  all hosts in a run from snapshots
+* Updated the SSH generation methods to allow various key types, and added a method to ECDSA keys
 
 
 0.0.1
